--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.8",
+    "eslint": "^4.15.0",
+    "eslint-config-google": "^0.9.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
