--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "bootstrap": "4.0.0-beta.3",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9"
+  },
+  "scripts": {
+    "dev": "webpack-dev-server",
+    "lint": "eslint src"
   }
 }
