--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "eslint": "^4.15.0",
     "eslint-config-google": "^0.9.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0"
@@ -22,7 +26,8 @@
     "popper.js": "^1.12.9"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
+    "dist": "webpack -p",
     "lint": "eslint src"
   }
 }
