--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
