Added babel loader

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "Ruifeng Xu",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
     "eslint-config-google": "^0.9.1",
