--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack-dev-server": "^2.10.0"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta.3",
+    "bootstrap": "^4.0.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9"
   },
